Fixed the overflow issue

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -187,7 +187,6 @@ body {
 
 	main {
 		height: 100%;
-		overflow: auto;
 	}
 
 	main .block {
